# whisper-hotkey

./: README.md  pyproject.toml
src/whisper_dictation/: __init__.py  __main__.py  cli.py  config.py  launchagent.py  permissions.py  service.py
