[project]
name = "whisper-hotkey"
version = "0.1.1"
description = "Double-tap Control to dictate with Whisper. Transcribes and pastes to any text field. macOS only."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["whisper", "dictation", "speech-to-text", "macos", "transcription"]
classifiers = [
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "sounddevice",
    "soundfile",
    "faster-whisper",
    "pynput",
]

[project.urls]
Homepage = "https://github.com/zane/whisper-hotkey"

[project.scripts]
whisper-hotkey = "whisper_dictation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_dictation"]
